--- a/css/content.css
+++ b/css/content.css
@@ -6,3 +6,20 @@
 .chordTransposerChord:hover{
 	text-decoration: underline;
 }
+
+/*dom selector class*/
+.ct_ds_hover{
+	cursor: pointer;
+}
+
+.ct_ds_hover:after{
+	content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    opacity: 0.4;
+    pointer-events:none;
+}
